[2020/2/17] Added a calendar to player start items.
[2020/2/17] Experiment: reset the Outback every week instead of every month.
[2020/2/17] Added a tinderbox to player start items.
[2020/2/17] Tinderbox is now craftable using charcoal.
[2020/2/17] Reduced level of Nether grit and dauthsand from 3 to 2, for easier digging.
[2020/2/17] Flint is now obtainable from Nether grit.
[2020/2/17] Reduced wear rate on copper/bronze tools to make them more useful.
[2020/2/16] The calendar item now displays timers for events in the Outback and its Dimensional Gate.
[2020/2/16] The Dimensional Gate in the outback now changes its exit location from time to time ….
[2020/2/16] Icemen (and some other mobs) no longer appear if loaded from old mapblocks during daytime (this is a bugfix).
[2020/2/16] Added some help/info-text to the jaunt formspec from the Key.
[2020/2/16] Improved textures for various seeds for farming plants.
[2020/2/16] Added a new kind of glowstone, only obtainable in the Outback.
[2020/2/13] Mostly finished created a new realm, for new players.
[2020/2/10] Added huge cavern ambiance.
[2020/2/9] Finally implemented reward (cloaking) for beating the Nether Challenge!
[2020/2/9] More sounds for when player dies.
[2020/2/9] Updated prospector texture to something less ugly. Updated a few other item textures, too.
[2020/2/9] Use better-looking sprite for the stamina HUD indicator.
[2020/2/9] Differentiate between different kinds of meat with new meat textures.
[2020/2/7] Updated recipe for the locked armor stand.
[2020/2/7] Added more cave waterdrop sounds.
[2020/2/7] The chat-alert-sound now changes volume based on player's AFK status. Louder when AFK, quieter when not AFK.
[2020/2/7] Added an option to turn the chat-alert-sound off, in the chat-filter formspec accessed from the Key.
[2020/2/7] Replaced the chat-alert-sound with something that sounds better, less annoying.